--- a/inspiral_theme.info.yml
+++ b/inspiral_theme.info.yml
@@ -1,4 +1,4 @@
-name: "Inspiral Theme"
+name: "Media Earth"
 description: "SASS starter kit for a Bootstrap Barrio SubTheme."
 type: theme
 core: 8.x
