--- a/me_creative.libraries.yml
+++ b/me_creative.libraries.yml
@@ -4,7 +4,7 @@ global-styling:
     js/popper.min.js: {}
     js/bootstrap.min.js: {}
     js/global.js: {}
-    js/inspiral_core.js: {}
+    js/mecretive_core.js: {}
   css:
       theme:
         css/animate.css: {}
