--- a/me_creative.info.yml
+++ b/me_creative.info.yml
@@ -5,8 +5,8 @@ type: theme
 core: 8.x
 base theme: bootstrap_barrio
 
-# libraries:
-#   - me_creative/global-styling
+libraries:
+  - me_creative/global-styling
 libraries-override:
   bootstrap_barrio/global-styling: false
 regions:
