--- a/mecreative.libraries.yml
+++ b/mecreative.libraries.yml
@@ -8,8 +8,8 @@ global-styling:
   css:
       theme:
         css/animate.css: {}
-        # css/me-creative-custom-print.css: { media: print }
-        # css/me-creative-custom.css: {}
+        css/mecreative-custom-print.css: { media: print }
+        css/mecreative-custom.css: {}
         css/mecreative.css: {}
         css/responsive-custom.css: {}
         
