--- a/me_creative.info.yml
+++ b/me_creative.info.yml
@@ -11,6 +11,7 @@ libraries:
 libraries-override:
   bootstrap_barrio/global-styling: false
 regions:
+  social_header: "Social Header"
   top_header: "Top Header"
   top_header_form: "Top Header Form"
   header: Header
