--- a/me_creative.info.yml
+++ b/me_creative.info.yml
@@ -13,6 +13,7 @@ libraries-override:
 regions:
   top_header: "Top Header"
   top_header_form: "Top Header Form"
+  social_header: "Social Header"
   header: Header
   header_form: "Header Form"
   primary_menu: "Primary menu"
